--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,18 +4,17 @@ trigger:
 pool:
   vmImage: 'ubuntu-18.04'
   demands:
-  - npm
+    - npm
 
 variables:
   buildConfiguration: 'Release'
-  wwwrootDir: 'TailSpin.SpaceGame.Web/wwwroot'
+  wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
   dotnetSdkVersion: '3.1.300'
 
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs:
-    packageType: sdk
     version: '$(dotnetSdkVersion)'
 
 - task: Npm@1
@@ -39,13 +38,13 @@ steps:
     command: 'restore'
     projects: '**/*.csproj'
 
-  - template: templates/build.yml
-    parameters:
-      buildConfiguration: 'Debug'
+- template: templates/build.yml
+  parameters:
+    buildConfiguration: 'Debug'
 
-  - template: templates/build.yml
-    parameters:
-      buildConfiguration: 'Release'
+- template: templates/build.yml
+  parameters:
+    buildConfiguration: 'Release'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
